# voronoi-thesis-tester

./: .project  README.md  c2dll_gcc_32bit.bat  hello.c
C++/: CircleArrangement with Vertex stuff.cpp  CircleArrangement with slow point finding.cpp  problem.cpp  problem.h  solver.cpp
C++/QT/: CMakeLists.txt  CircleArrangement.cpp  ColoredEdge.cpp  Edge.h  Geometry.cpp  Logging.h  PointInCircles.cpp  VoronoiDiagram.cpp  basicDefinitions.h  bench.cnfg  example.cnfg  main.cpp  moc_mygraphics.cpp  mygraphics.cpp  mygraphics.h  problem.h  randomtest  reruntest  statistics.txt
C++/QT/solver/: solver.cpp  solver.h
report/: report.tex
report/pictures/: PointInFace.xcf  PointInFace2.xcf
report/statistics/: 3to6.csv  all.ods  results.ods
src/: Catchable.java  CoordinatePair.java  Dot.java  JMalPanel.java  MainApp.java  Paintable.java  Test.java  VoronoiEdge.java
src/icons/: Icons.java
src/jni/: JNITest.java  JNIUtils.java  makeso
src/jniutils/: JNITest.java  jni_JNITest.h
